--- a/train_docker/Dockerfile.train_flash
+++ b/train_docker/Dockerfile.train_flash
@@ -18,4 +18,4 @@ RUN cd flash-attention/csrc/layer_norm && pip install .
 
 WORKDIR /workspace/LLaMA-Efficient-Tuning
 # RUN bash nips_finetune_llama2_ds_13b.sh
-CMD ["bash", "nips_finetune_flash.sh"]
+RUN bash nips_finetune_flash.sh
